// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageGovernance disables proposal creation if not connected 1`] = `
<div
  class="tm-page governance"
  data-title="Governance"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  
        --
      
                </h2>
                 
                <div
                  class="bech32-address"
                >
                  <div
                    class="address"
                    id="address"
                  >
                    
    cosmos…xxn9
  
                  </div>
                   
                  <div
                    class="copied"
                  >
                    <i
                      class="material-icons"
                    >
                      check
                    </i>
                    <span>
                      Copied
                    </span>
                  </div>
                </div>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  --
                </h2>
              </div>
               
              <div
                class="top-section"
              >
                <h3>
                  Rewards
                </h3>
                 
                <h2>
                  --
                </h2>
                 
                <router-link-stub
                  class="withdraw-rewards"
                  exact="exact"
                  id="withdraw-btn"
                  style="display: none;"
                  to=""
                >
                  
  Connecting...

                </router-link-stub>
              </div>
            </div>
              
            <!---->
          </div>
           
          <div
            class="tool-bar"
          >
             
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                
      exit_to_app
    
              </i>
            </a>
             
            <!---->
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs-and-buttons"
      >
        <div
          class="tabs"
        >
          <div
            class="tab"
          >
            <router-link-stub
              to="[object Object]"
            >
              
      Proposals
    
            </router-link-stub>
          </div>
          <div
            class="tab"
          >
            <router-link-stub
              to="[object Object]"
            >
              
      Parameters
    
            </router-link-stub>
          </div>
        </div>
         
        <div
          class="header-buttons"
        >
          <button
            class="tm-btn"
            disabled="disabled"
            id="propose-btn"
          >
            <span
              class="tm-btn__container tm-btn--primary"
            >
              <!---->
              <span
                class="tm-btn__value"
              >
                Connecting...
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <!---->
      
    <!---->
     
    <router-view-stub />
  </main>
   
  <footer>
    <ul>
      <li>
        <router-link-stub
          class="app-menu-item-small"
          exact="exact"
          title="About"
          to="/about"
        >
          
        About
      
        </router-link-stub>
      </li>
       
      <li>
        <router-link-stub
          class="app-menu-item-small"
          exact="exact"
          title="Careers"
          to="/careers"
        >
          
        Careers
      
        </router-link-stub>
      </li>
       
      <li>
        <router-link-stub
          class="app-menu-item-small"
          exact="exact"
          title="Security"
          to="/security"
        >
          
        Security
      
        </router-link-stub>
      </li>
       
      <li>
        <router-link-stub
          class="app-menu-item-small"
          exact="exact"
          title="Terms"
          to="/terms"
        >
          
        Terms of Service
      
        </router-link-stub>
      </li>
       
      <li>
        <router-link-stub
          class="app-menu-item-small"
          exact="exact"
          title="Privacy"
          to="/privacy"
        >
          
        Privacy Policy
      
        </router-link-stub>
      </li>
    </ul>
  </footer>
</div>
`;

exports[`PageGovernance has the expected html structure 1`] = `
<div
  class="tm-page governance"
  data-title="Governance"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  
        --
      
                </h2>
                 
                <div
                  class="bech32-address"
                >
                  <div
                    class="address"
                    id="address"
                  >
                    
    cosmos…xxn9
  
                  </div>
                   
                  <div
                    class="copied"
                  >
                    <i
                      class="material-icons"
                    >
                      check
                    </i>
                    <span>
                      Copied
                    </span>
                  </div>
                </div>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  --
                </h2>
              </div>
               
              <div
                class="top-section"
              >
                <h3>
                  Rewards
                </h3>
                 
                <h2>
                  --
                </h2>
                 
                <router-link-stub
                  class="withdraw-rewards"
                  exact="exact"
                  id="withdraw-btn"
                  style="display: none;"
                  to=""
                >
                  
  Withdraw

                </router-link-stub>
              </div>
            </div>
              
            <!---->
          </div>
           
          <div
            class="tool-bar"
          >
             
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                
      exit_to_app
    
              </i>
            </a>
             
            <!---->
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs-and-buttons"
      >
        <div
          class="tabs"
        >
          <div
            class="tab"
          >
            <router-link-stub
              to="[object Object]"
            >
              
      Proposals
    
            </router-link-stub>
          </div>
          <div
            class="tab"
          >
            <router-link-stub
              to="[object Object]"
            >
              
      Parameters
    
            </router-link-stub>
          </div>
        </div>
         
        <div
          class="header-buttons"
        >
          <button
            class="tm-btn"
            id="propose-btn"
          >
            <span
              class="tm-btn__container tm-btn--primary"
            >
              <!---->
              <span
                class="tm-btn__value"
              >
                Create Proposal
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <!---->
      
    <!---->
     
    <router-view-stub />
  </main>
   
  <footer>
    <ul>
      <li>
        <router-link-stub
          class="app-menu-item-small"
          exact="exact"
          title="About"
          to="/about"
        >
          
        About
      
        </router-link-stub>
      </li>
       
      <li>
        <router-link-stub
          class="app-menu-item-small"
          exact="exact"
          title="Careers"
          to="/careers"
        >
          
        Careers
      
        </router-link-stub>
      </li>
       
      <li>
        <router-link-stub
          class="app-menu-item-small"
          exact="exact"
          title="Security"
          to="/security"
        >
          
        Security
      
        </router-link-stub>
      </li>
       
      <li>
        <router-link-stub
          class="app-menu-item-small"
          exact="exact"
          title="Terms"
          to="/terms"
        >
          
        Terms of Service
      
        </router-link-stub>
      </li>
       
      <li>
        <router-link-stub
          class="app-menu-item-small"
          exact="exact"
          title="Privacy"
          to="/privacy"
        >
          
        Privacy Policy
      
        </router-link-stub>
      </li>
    </ul>
  </footer>
</div>
`;
